--- a/home/dot_zprofile.tmpl
+++ b/home/dot_zprofile.tmpl
@@ -1,4 +1,4 @@
-eval "$(/opt/homebrew/bin/brew shellenv)"
+# vim: syntax=sh
 
 {{- if lookPath "orbctl" }}
 # Added by OrbStack: command-line tools and integration
