chore: add gh extensions

--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -72,8 +72,8 @@ toolVersionsPath = {{ joinPath .chezmoi.homeDir ".tool-versions" | quote }}
 accountId = {{ $opPersonalAccountId }}
 vaultId = {{ $opPersonalVaultId }}
 itemId = {{ (onepassword "GitHub CLI token" $opPersonalVaultName $opPersonalAccountCode).id | quote }}
+token = {{ onepasswordRead "op://dev/GitHub CLI token/token" $opPersonalAccountCode | quote }}
 chezmoiToken = {{ onepasswordRead "op://dev/chezmoi GitHub API Token/token" $opPersonalAccountCode | quote }}
-octoToken = {{ onepasswordRead "op://dev/GitHub CLI token/token" $opPersonalAccountCode | quote }}
 
 {{- if $isWork }}
 [data.glab]
