--- a/home/dot_config/zsh/dot_zsh_credentials.zsh.tmpl
+++ b/home/dot_config/zsh/dot_zsh_credentials.zsh.tmpl
@@ -1,5 +1,5 @@
 # vim: syntax=sh
 
 export CHEZMOI_GITHUB_ACCESS_TOKEN={{ .gh.chezmoiToken | trim }}
-export OCTO_GH_TOKEN={{ .gh.octoToken | trim }}
+export OCTO_GH_TOKEN={{ .gh.token | trim }}
 
