--- a/home/.chezmoiscripts/darwin/run_after_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/darwin/run_after_install-packages.sh.tmpl
@@ -52,6 +52,14 @@ function update_theme() {
   echo "fast-theme XDG:catppuccin-mocha"
 }
 
+function install_gh_extensions() {
+  echo "Installing gh extensions..."
+  {{ $ghToken := .gh.token -}}
+  {{ range .packages.gh.extensions -}}
+  GH_TOKEN={{ $ghToken }} gh extension install {{ . }}
+  {{ end -}}
+}
+
 function main() {
   if [[ $(get_brewfile_timestamp) > $(get_bundle_timestamp) ]];
   then
@@ -59,6 +67,7 @@ function main() {
     asdf_install
     set_bundle_timestamp;
   fi
+  install_gh_extensions
   update_theme
 }
 
