chore: move from projects to dev

--- a/home/dot_config/git/config.tmpl
+++ b/home/dot_config/git/config.tmpl
@@ -2,7 +2,7 @@
   name = {{ .name }}
   email = {{ .git.personal.email }}
   signingkey = {{ .git.personal.signingkey | trim }}
-[includeIf "gitdir:~/projects/code/work/"]
+[includeIf "gitdir:~/dev/work/"]
   path = ~/.config/git/config-work
 [include]
 	path = ~/.config/delta/themes/catpuccin.gitconfig
