--- a/home/dot_config/brew/Brewfile.tmpl
+++ b/home/dot_config/brew/Brewfile.tmpl
@@ -2,4 +2,8 @@
 
 {{ if .computer.isWork -}}
 {{ onepasswordRead "op://Employee/Brewfile/notesPlain" .op.work.accountCode -}}
+{{- else -}}
+{{ onepasswordRead "op://Employee/Brewfile_private/notesPlain" .op.personal.accountCode -}}
 {{- end -}}
+
+
