--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -63,10 +63,10 @@ vaultName = {{ $opWorkVaultName | quote }}
 
 [data.brew]
 brewfilePath = {{ joinPath .chezmoi.homeDir ".config" "brew" "Brewfile" | quote }}
-bundleTimestampPath = {{ joinPath .chezmoi.homeDir ".config" "brew" "brew_bundle_timestamp.txt" | quote }}
-fallbackDate = "1970-01-01T00:00:00+0000"
-dateFormat = "%Y-%m-%dT%H:%M:%S%z"
 toolVersionsPath = {{ joinPath .chezmoi.homeDir ".tool-versions" | quote }}
+
+[data.velja]
+veljaFilePath = {{ joinPath .chezmoi.homeDir ".config" "velja" "Velja.plist" | quote }}
 
 [data.gh]
 accountId = {{ $opPersonalAccountId }}
