--- a/home/.chezmoiscripts/darwin/run_after_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/darwin/run_after_install-packages.sh.tmpl
@@ -30,16 +30,22 @@ function install_gh_extensions() {
   {{ end -}}
 }
 
-function import_velja_settings() {
-  echo "Importing Velja settings..."
-  defaults import com.sindresorhus.Velja {{ .velja.veljaFilePath }}
+function import_app_settings {
+  echo "Importing settings for $1..."
+  defaults import $2 $3
+  echo "Settings imported for $1!"
+}
+
+function import_all_settings {
+  import_app_settings "Better Display" "pro.betterdisplay.BetterDisplay" {{ .exportedSettings.betterDisplayFilePath }}
+  import_app_settings "Velja" "com.sindresorhus.Velja" {{ .exportedSettings.veljaFilePath }}
 }
 
 function main() {
   brew_bundle
   asdf_install
   install_gh_extensions
-  import_velja_settings
+  import_all_settings
   update_theme
 }
 
