--- a/home/private_dot_ssh/allowed_signers.tmpl
+++ b/home/private_dot_ssh/allowed_signers.tmpl
@@ -1,2 +1,4 @@
 {{ .git.personal.email }} {{ .git.personal.signingkey | trim }}
+{{ if .computer.isWork -}}
 {{ .git.work.email }} {{ .git.work.signingkey | trim }}
+{{ end -}}
