--- a/home/dot_config/1Password/ssh/agent.toml.tmpl
+++ b/home/dot_config/1Password/ssh/agent.toml.tmpl
@@ -2,6 +2,8 @@
 account = {{ .op.personal.accountName | quote }}
 vault = {{ .op.personal.vaultName | quote }}
 
+{{ if .computer.isWork -}}
 [[ssh-keys]]
 account = {{ .op.work.accountName | quote }}
 vault = {{ .op.work.vaultName | quote }}
+{{ end -}}
