--- a/home/dot_zprofile.tmpl
+++ b/home/dot_zprofile.tmpl
@@ -1,6 +1,6 @@
 # vim: syntax=sh
 
-{{- if lookPath "orbctl" }}
+{{- if not .computer.isWork }}
 # Added by OrbStack: command-line tools and integration
 source ~/.orbstack/shell/init.zsh 2>/dev/null || :
 {{ end }}
