--- a/home/.chezmoiscripts/darwin/run_after_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/darwin/run_after_install-packages.sh.tmpl
@@ -30,10 +30,35 @@ function install_gh_extensions() {
   {{ end -}}
 }
 
+function install_xterm_kitty_terminfo() {
+    # Attempt to get terminfo for xterm-kitty
+    if ! infocmp xterm-kitty &>/dev/null; then
+      echo "xterm-kitty terminfo not found. Installing..."
+      # Create a temp file
+      tempfile=$(mktemp)
+      # Download the kitty.terminfo file
+      # https://github.com/kovidgoyal/kitty/blob/master/terminfo/kitty.terminfo
+      if curl -o "$tempfile" https://raw.githubusercontent.com/kovidgoyal/kitty/master/terminfo/kitty.terminfo; then
+        echo "Downloaded kitty.terminfo successfully."
+        # Compile and install the terminfo entry for my current user
+        if tic -x -o ~/.terminfo "$tempfile"; then
+          echo "xterm-kitty terminfo installed successfully."
+        else
+          echo "Failed to compile and install xterm-kitty terminfo."
+        fi
+      else
+        echo "Failed to download kitty.terminfo."
+      fi
+      # Remove the temporary file
+      rm "$tempfile"
+    fi
+  }
+
 function main() {
   brew_bundle
   asdf_install
   install_gh_extensions
+  install_xterm_kitty_terminfo
   update_theme
 }
 
