chore(zsh): add aws cli OMZP

--- a/home/dot_config/zsh/dot_zshrc.tmpl
+++ b/home/dot_config/zsh/dot_zshrc.tmpl
@@ -44,6 +44,7 @@ zinit light-mode for \
 
 # Add in omz plugins
 zinit snippet OMZP::asdf
+zinit snippet OMZP::aws
 zinit snippet OMZP::brew
 zinit snippet OMZP::bun
 zinit snippet OMZP::command-not-found
