--- a/home/dot_config/zsh/dot_zsh_functions.zsh.tmpl
+++ b/home/dot_config/zsh/dot_zsh_functions.zsh.tmpl
@@ -98,3 +98,13 @@ function delete_recursively {
     readonly folder_name=${1:?"node_modules"}
     find . -name "$folder_name" -type d -prune -print -exec rm -rf '{}' \;
 }
+
+function pr_approve {
+  # if the pr id is not provided, then return error with a message
+  if [ -z "$1" ]; then
+    echo "Please provide the pull request number"
+    return 1
+  fi
+
+  gh pr review $1 --approve
+}
