--- a/home/dot_config/zsh/dot_zsh_functions.zsh.tmpl
+++ b/home/dot_config/zsh/dot_zsh_functions.zsh.tmpl
@@ -17,9 +17,15 @@ function zinit_update {
   zi delete --clean
 }
 
+function uv_update {
+  uv tool upgrade --all &&
+  uv clean
+}
+
 function update_all {
   brew_update &&
   zinit_update &&
+  uv_update &&
   GH_TOKEN=$OCTO_TOKEN gh extension upgrade --all &&
   asdf reshim
 }
@@ -99,12 +105,3 @@ function delete_recursively {
     find . -name "$folder_name" -type d -prune -print -exec rm -rf '{}' \;
 }
 
-function pr_approve {
-  # if the pr id is not provided, then return error with a message
-  if [ -z "$1" ]; then
-    echo "Please provide the pull request number"
-    return 1
-  fi
-
-  gh pr review $1 --approve
-}
