--- a/home/dot_config/exact_private_aerospace/aerospace.toml.tmpl
+++ b/home/dot_config/exact_private_aerospace/aerospace.toml.tmpl
@@ -105,16 +105,16 @@ alt-slash = 'layout tiles horizontal vertical'
 alt-comma = 'layout accordion horizontal vertical'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#focus
-alt-ctrl-h = 'focus left --ignore-floating'
-alt-ctrl-j = 'focus down --ignore-floating'
-alt-ctrl-k = 'focus up --ignore-floating'
-alt-ctrl-l = 'focus right --ignore-floating'
+cmd-ctrl-h = 'focus left --ignore-floating'
+cmd-ctrl-j = 'focus down --ignore-floating'
+cmd-ctrl-k = 'focus up --ignore-floating'
+cmd-ctrl-l = 'focus right --ignore-floating'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move
-alt-shift-h = 'move left'
-alt-shift-j = 'move down'
-alt-shift-k = 'move up'
-alt-shift-l = 'move right'
+cmd-shift-h = 'move left'
+cmd-shift-j = 'move down'
+cmd-shift-k = 'move up'
+cmd-shift-l = 'move right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
 alt-1 = 'workspace 1️⃣'
