--- a/home/dot_config/zsh/dot_zshrc.tmpl
+++ b/home/dot_config/zsh/dot_zshrc.tmpl
@@ -125,6 +125,7 @@ eval "$(fzf --zsh)"
 eval "$(thefuck --alias)"
 eval "$(gh copilot alias -- zsh)"
 eval "$(zoxide init --cmd cd zsh)"
+eval "$(tmuxifier init -)"
 
 # 1password cli
 source ${HOME}/.config/op/plugins.sh
@@ -150,4 +151,10 @@ export ASDF_GOLANG_MOD_VERSION_ENABLED=true
 
 # run oh-my-posh
 eval "$(oh-my-posh init zsh --config $HOME/.config/oh-my-posh/config.json)"
+
+tmux-window-name() {
+  ($TMUX_PLUGIN_MANAGER_PATH/tmux-window-name/scripts/rename_session_windows.py &)
+}
+
+add-zsh-hook chpwd tmux-window-name
 
