chore: rename homedir session file

--- a/home/exact_dot_tmuxifier/layouts/homedir.session.sh.tmpl
+++ b/home/exact_dot_tmuxifier/layouts/homedir.session.sh.tmpl
@@ -5,7 +5,7 @@ session_root {{ .chezmoi.homeDir | quote }}
 
 # Create session with specified name if it does not already exist. If no
 # argument is given, session name will be based on layout file name.
-if initialize_session "dot_config"; then
+if initialize_session "homedir"; then
   new_window "editor"
   select_window 1
   run_cmd "vim ."
