chore: add confetti helper function

--- a/home/dot_config/zsh/dot_zsh_functions.zsh.tmpl
+++ b/home/dot_config/zsh/dot_zsh_functions.zsh.tmpl
@@ -105,3 +105,6 @@ function delete_recursively {
     find . -name "$folder_name" -type d -prune -print -exec rm -rf '{}' \;
 }
 
+function confetti {
+  open raycast://extensions/raycast/raycast/confetti
+}
